tests/NormalTests/paczka1/fuzzy1/55489307.err
Error in line 30: Klq S285 5,82
Error in line 13: Hk1SvSoCf A204 70,0
Error in line 35: 9b5z S944 83,34
Error in line 36: Klq A849 55,9
Error in line 29: S285 A849 273,7
